fix(Credit, review-queue): spacing bugs resolved BREAKING CHANGE:

--- a/pages/review/reviewqueue.module.scss
+++ b/pages/review/reviewqueue.module.scss
@@ -661,11 +661,12 @@
     border-radius: 6px;
     margin-top: 20px;
     .head_container {
+        padding: 25px;
+        text-align: center;
         .heading {
             font-size: 22px;
             font-weight: bold;
             color: #3687E8;
-            padding: 27px 35px;
             line-height: 27px;
             margin-bottom: 0;
         }
@@ -674,7 +675,6 @@
             color: #3687e8;
             font-weight: normal;
             line-height: 20px;
-            padding: 20px;
         }
     }
     .dashboard_form {
